added tests for XMLMemento (reusing existing JSONMemento tests)
Signed-off-by: Andre Dietisheim <adietish@redhat.com>